tests/unit/compile/cases/syntax-errors/03.text-php-tag.t
foo <?php boo();
---- THROW% ----
Unexpected "?"; expected: "!" or <HtmlNameWord> near `?php boo();` in `%s` at line 1
